<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_fragment_view_fl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/search_fragment_view_action_bar"
        layout="@layout/farm_action_bar" />

    <ScrollView
        android:layout_below="@id/search_fragment_view_action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/default_background_color"
            android:orientation="vertical"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="30dp">

            <com.omni.newtaipeifarm.view.OmniEditText
                android:id="@+id/search_fragment_view_oet_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background_skin"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:gravity="center"
                android:hint="@string/search"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:background="@color/skin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/venue_search"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/search_fragment_view_tv_venue_search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_background_skin"
                        android:padding="8dp" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/round_background_primary"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:src="@android:drawable/arrow_down_float" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/category_search"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/search_fragment_view_tv_category_search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_background_skin"
                        android:padding="8dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/round_background_primary"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:src="@android:drawable/arrow_down_float" />

                </RelativeLayout>

            </LinearLayout>

            <!--<FrameLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1" />-->

            <TextView
                android:id="@+id/search_fragment_view_tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/round_background_skin"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="8dp"
                android:text="@string/search"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>