<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/farm_info_fragment_view_tb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/farm_info_fragment_view_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="@dimen/default_padding"
            android:drawableLeft="@drawable/button_pin_left_arrow"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/action_bar_text_back"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/farm_info_fragment_view_tv_action_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_action_bar" />

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/farm_info_fragment_view_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/farm_info_fragment_view_tb">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">

            <include
                android:id="@+id/farm_info_fragment_view_pic_pager"
                layout="@layout/pic_pager_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="#cc0"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="@color/default_background_color"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="@dimen/default_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/farm_info_fragment_view_ll_vr"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@mipmap/button_vr" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:text="@string/info_view_btn_title_vr"
                                android:textColor="@color/colorPrimary" />

                        </LinearLayout>

                        <!--<LinearLayout-->
                        <!--android:id="@+id/farm_info_fragment_view_ll_3d"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center"-->
                        <!--android:src="@mipmap/button_3_d" />-->

                        <!--<TextView-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="5dp"-->
                        <!--android:gravity="center"-->
                        <!--android:text="@string/info_view_btn_title_3d"-->
                        <!--android:textColor="@color/colorPrimary" />-->

                        <!--</LinearLayout>-->

                        <LinearLayout
                            android:id="@+id/farm_info_fragment_view_ll_ec"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@mipmap/button_shop" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:text="@string/info_view_btn_title_shop"
                                android:textColor="@color/colorPrimary" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/farm_info_fragment_view_ll_line"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@mipmap/button_line" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:text="@string/info_view_btn_title_line"
                                android:textColor="@color/colorPrimary" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/farm_info_fragment_view_ll_website"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@mipmap/icon_web" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:text="@string/info_view_btn_title_website"
                                android:textColor="@color/colorPrimary" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/default_padding"
                        android:background="@color/farm_color" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:paddingBottom="10dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:paddingTop="10dp">

                        <RelativeLayout
                            android:id="@+id/farm_info_fragment_view_rl_likes"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true">

                            <ImageView
                                android:id="@+id/farm_info_fragment_view_iv_like"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:background="@mipmap/button_heart_w" />
                        </RelativeLayout>

                        <FrameLayout
                            android:id="@+id/farm_info_fragment_view_fl_icon_fl"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="8dp">

                            <com.android.volley.toolbox.NetworkImageView
                                android:id="@+id/farm_info_fragment_view_niv"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:src="@mipmap/farm_icon_1" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/round_iv_background" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/rectangle_iv_background" />

                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_toLeftOf="@id/farm_info_fragment_view_rl_likes"
                            android:layout_toRightOf="@id/farm_info_fragment_view_fl_icon_fl"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/farm_info_fragment_view_tv_title"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@android:color/black"
                                    tools:text="內湖清香農場" />

                                <TextView
                                    android:id="@+id/farm_info_fragment_view_tv_popular"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#f00"
                                    android:layout_marginLeft="5dp"
                                    android:textSize="10sp"
                                    tools:text="人氣值：30" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/farm_info_fragment_view_tv_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="@color/gray_8a"
                                android:textSize="10sp"
                                tools:text="A story of beauty and illusion" />

                            <TextView
                                android:id="@+id/farm_info_fragment_view_tv_mail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:textColor="@color/gray_8a"
                                android:textSize="10sp"
                                tools:text="A story of beauty and illusion" />

                        </LinearLayout>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="@dimen/default_padding"
                        android:background="@color/farm_color" />

                    <android.support.design.widget.TabLayout
                        android:id="@+id/farm_info_fragment_view_tl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="5dp"
                        app:tabBackground="@drawable/tab_selector"
                        app:tabGravity="center"
                        app:tabIndicatorHeight="0dp"
                        app:tabPaddingEnd="0dp"
                        app:tabPaddingStart="0dp" />

                    <com.omni.newtaipeifarm.view.OmniViewPager
                        android:id="@+id/farm_info_fragment_view_vp_farm_content"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        app:slide_paging_enabled="false" />

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>

    </FrameLayout>
</RelativeLayout>